@@ -1,3 +1,9 @@
+2007-07-01  Denis Washington  <denisw@svn.gnome.org>
+
+	* gnome-theme-info.[ch]:
+	Add support for cursor themes (GnomeThemeCursorInfo); probably still a bit
+	rough around the edges, but it works.
+
 2007-07-01  Jens Granseuer  <jensgr@gmx.net>
 
 	* gconf-property-editor.c: (peditor_string_value_changed),
